# Palindrome-Finder

./: CMakeLists.txt  LICENSE.md  README.md  google_words.txt  main.cpp  make_debug_script  make_script  words.txt  words_subset.txt
WordNet words/: adverbs.txt  adverbs.txt~  verbs.txt  verbs.txt~
include/: double_ordered_set.h  entire_set_iterator.h  enum_class_map.h  file_io.h  iword_candidate_iterator.h  overhang.h  palindrome_calculation.h  palindrome_tools.h  reverse_less.h  side.h  specialized_subword_behaviors.h  string_set.h  subword_iterator.h  superword_iterator.h  timer.h  word_building_stack.h  word_candidate_iterator.h  word_type.h
src/: entire_set_iterator.cpp  file_io.cpp  main.cpp  palindrome_calculation.cpp  palindrome_tools.cpp  reverse_less.cpp  specialized_subword_behaviors.cpp  string_set.cpp  subword_iterator.cpp  superword_iterator.cpp  timer.cpp  word_building_stack.cpp  word_candidate_iterator.cpp
unit_test/: palindrome_calculation_test.h  palindrome_tools_test.h  subword_iterator_test.h
wordnet_words/: adjectives.txt  nouns.txt
